...
                                                    <action selector="registerPressed:" destination="VEr-aj-5Zx" eventType="touchUpInside" id="9iZ-Ts-Gr7"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAq-2P-Pfa">
                                                <rect key="frame" x="0.0" y="173.5" width="414" height="60"/>
                                                <color key="backgroundColor" name="BrandBlue"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="Au8-qz-s3y"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                <state key="normal" title="Log In">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <connections>
                                                    <action selector="loginPressed:" destination="VEr-aj-5Zx" eventType="touchUpInside" id="owa-ob-2hK"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yk8-HH-KOO">
                                                <rect key="frame" x="125" y="23.5" width="269" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginEmailTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qkQ-RU-OE8">
                                                <rect key="frame" x="20" y="80.5" width="90" height="20.5"/>
                                                <constraints>
...
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1yg-oy-vAB">
                                                <rect key="frame" x="125" y="74" width="269" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginPasswordTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="error text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="UEQ-Rf-Z9w">
                                                <rect key="frame" x="0.0" y="743.5" width="414" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginErrorLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Save Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uvi-Z0-O8P">
                                                <rect key="frame" x="212" y="126" width="115" height="21"/>
...
